--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,venv,django
-# Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode,venv,django
+# Created by https://www.toptal.com/developers/gitignore/api/python,venv,visualstudiocode,django
+# Edit at https://www.toptal.com/developers/gitignore?templates=python,venv,visualstudiocode,django
 
 ### Django ###
 *.log
@@ -294,7 +294,4 @@ pip-selfcheck.json
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,venv,django
-
-static02
-templates02
+# End of https://www.toptal.com/developers/gitignore/api/python,venv,visualstudiocode,django
