--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,24 @@
 asgiref==3.11.0
 boto3==1.42.33
 botocore==1.42.33
+colorama==0.4.6
+decorator==5.2.1
 Django==5.2.10
+ImageIO==2.37.2
+imageio-ffmpeg==0.6.0
 jmespath==1.1.0
+moviepy==2.2.1
+numpy==2.2.6
+pillow==11.3.0
+proglog==0.1.12
 psycopg2-binary==2.9.11
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+python-dotenv==1.2.1
 s3transfer==0.16.0
 six==1.17.0
 sqlparse==0.5.5
+tqdm==4.67.1
 typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.3
