--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 asgiref==3.11.0
 boto3==1.42.33
 botocore==1.42.33
+certifi==2026.1.4
+charset-normalizer==3.4.4
 colorama==0.4.6
 decorator==5.2.1
 Django==5.2.10
+django-allauth==65.14.0
+idna==3.11
 ImageIO==2.37.2
 imageio-ffmpeg==0.6.0
 jmespath==1.1.0
@@ -12,9 +16,11 @@ numpy==2.2.6
 pillow==11.3.0
 proglog==0.1.12
 psycopg2-binary==2.9.11
+PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.2.1
+requests==2.32.5
 s3transfer==0.16.0
 six==1.17.0
 sqlparse==0.5.5
