--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,35 @@
+anyio==4.12.1
 asgiref==3.11.0
 boto3==1.42.33
 botocore==1.42.33
 certifi==2026.1.4
+cffi==2.0.0
 charset-normalizer==3.4.4
+click==8.3.1
 colorama==0.4.6
+cryptography==46.0.4
 decorator==5.2.1
 Django==5.2.10
 django-allauth==65.14.0
+exceptiongroup==1.3.1
+h11==0.16.0
+httptools==0.7.1
 idna==3.11
 ImageIO==2.37.2
 imageio-ffmpeg==0.6.0
 jmespath==1.1.0
 moviepy==2.2.1
 numpy==2.2.6
+packaging==26.0
 pillow==11.3.0
 proglog==0.1.12
 psycopg2-binary==2.9.11
+pycparser==3.0
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.2.1
+PyYAML==6.0.3
 requests==2.32.5
 s3transfer==0.16.0
 six==1.17.0
@@ -28,3 +38,7 @@ tqdm==4.67.1
 typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.3
+uvicorn==0.40.0
+watchfiles==1.1.1
+websockets==16.0
+whitenoise==6.11.0
