--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 anyio==4.12.1
 asgiref==3.11.0
+async-timeout==5.0.1
 boto3==1.42.33
 botocore==1.42.33
 certifi==2026.1.4
 cffi==2.0.0
+channels==4.3.2
+channels_redis==4.3.0
 charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
@@ -19,6 +22,7 @@ ImageIO==2.37.2
 imageio-ffmpeg==0.6.0
 jmespath==1.1.0
 moviepy==2.2.1
+msgpack==1.1.2
 numpy==2.2.6
 packaging==26.0
 pillow==11.3.0
@@ -30,6 +34,7 @@ python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.2.1
 PyYAML==6.0.3
+redis==7.1.0
 requests==2.32.5
 s3transfer==0.16.0
 six==1.17.0
